--- a/index.html
+++ b/index.html
@@ -525,6 +525,7 @@ function readURL(){
 
 
 /**
+ *
  * Element.requestFullScreen() polyfill
  * @author Chris Ferdinandi
  * @license MIT
@@ -674,17 +675,17 @@ function makeResizableDiv(div) {
 
 makeResizableDiv('.resizable')
 
-function myFunction() {
-  var element = document.getElementsByClassName("hide_resizer")[0];
-  element.classList.remove("resizer");
-  var element1 = document.getElementsByClassName("hide_resizer")[1];
-  element1.classList.remove("resizer");
-  var element2 =
-  document.getElementsByClassName("hide_resizer")[2];
-  element2.classList.remove("resizer");
-  var element3 = document.getElementsByClassName("hide_resizer")[3];
-  element3.classList.remove("resizer");
-}
+// function myFunction() {
+//   var element = document.getElementsByClassName("hide_resizer")[0];
+//   element.classList.remove("resizer");
+//   var element1 = document.getElementsByClassName("hide_resizer")[1];
+//   element1.classList.remove("resizer");
+//   var element2 =
+//   document.getElementsByClassName("hide_resizer")[2];
+//   element2.classList.remove("resizer");
+//   var element3 = document.getElementsByClassName("hide_resizer")[3];
+//   element3.classList.remove("resizer");
+// }
 
 </script>
 
