--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 #names { display:none;padding:5px; }
 #namesbox { min-height:400px;font-size:32px;color:#333;resize:none;border:1px solid #F39C12; }
 .extra { font-size:16px;margin-top:20px; }
-#result1 { background:#000;color:#fbe34b;font-size:150%;margin-top:5em;padding:25px;z-index:10;margin-top:-150px; }
+#result1 { background:#000;color:#ffde59;font-size:150%;margin-top:5em;padding:25px;z-index:10;margin-top:-150px; }
 #headline { font-size:250%; padding-top:0.5em; }
 body { background:#87CEEB url(https://source.unsplash.com/user/heysupersimi) no-repeat; background-size: cover; }
 #varnote { font-size:40px;text-align:center;padding:30px; }
