changed font-family to font-family: 'Montserrat', sans-serif;

--- a/index.html
+++ b/index.html
@@ -13,16 +13,19 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg==" crossorigin="anonymous"></script>
   <script src="js/vendor/custom.modernizr.js"></script>
   <script src="js/jquery-latest.min.js"></script>
-
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap" rel="stylesheet">
 <style>
+h3{
+  font-family: 'Montserrat', sans-serif;
+}  
 #values { position:relative;font-size:500%;text-align:center;margin: 1em auto;z-index:0; }
 .name { overflow:hidden;display:block; }
 #names { display:none;padding:5px; }
 #namesbox { min-height:400px;font-size:32px;color:#333;resize:none;border:1px solid #F39C12; }
 .extra { font-size:16px;margin-top:20px; }
-#result1 { background:#000;color:#ffde59;font-size:150%;margin-top:5em;padding:25px;z-index:10;margin-top:-150px; }
+#result1 { background:#000;color:#ffde59;font-size:150%;margin-top:5em;padding:25px;z-index:10;margin-top:-150px;font-family: 'Montserrat', sans-serif; }
 #headline { font-size:250%; padding-top:0.5em; }
-body { background:#87CEEB url(https://source.unsplash.com/user/heysupersimi) no-repeat; background-size: cover; }
+body { background:#87CEEB url(https://source.unsplash.com/user/heysupersimi) no-repeat; background-size: cover; font-family: 'Montserrat', sans-serif; }
 #varnote { font-size:40px;text-align:center;padding:30px; }
 .icons > input
 {
@@ -62,6 +65,7 @@ body { background:#87CEEB url(https://source.unsplash.com/user/heysupersimi) no-
 /* begin base styles */
 /* https://milligram.github.io/ */
 @import url('//fonts.googleapis.com/css?family=Roboto:300,300italic,700,700italic');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap');
 @import url('//cdn.rawgit.com/necolas/normalize.css/master/normalize.css');
 @import url('//cdn.rawgit.com/milligram/milligram/master/dist/milligram.min.css');
 
