--- a/index.html
+++ b/index.html
@@ -168,6 +168,27 @@ body { background:#F1C40F url(img/bg-noise-orange.png); font-family: 'Montserrat
 
 .dropdown:hover .dropdown-content {
   display: block;
+  color:black;
+}
+
+.button{
+  background-color:transparent;
+  border: 3px solid white;
+}
+
+.button:hover{
+  background-color:white;
+  color: black;
+}
+
+.reset:hover{
+  background-color:#c60f13;
+  color:white;
+}
+
+.roll:hover{
+  background-color:#5da423;
+  color:white;
 }
 </style>
 
@@ -179,10 +200,10 @@ body { background:#F1C40F url(img/bg-noise-orange.png); font-family: 'Montserrat
 		<!-- <div class="large-12 columns" style="padding-top:50px;background:#111 url(https://source.unsplash.com/user/heysupersimi) repeat-x center top;z-index:20;"> -->
       <div class="large-12 columns" style="padding-top:50px;background:rgba(0,0,0,0);z-index:20;">
 		<ul class="button-group even-5 " >
-      <li><a href="index.html" class="alert button" id="reset">Reset</a></li>
+      <li><a href="index.html" class="reset button" id="reset">Reset</a></li>
 			<li><button class="button" id="list" onclick="namelist();">Name List</button></li>
 			<li><button class="button" id="save" onclick="save();">Save &amp; Update</button></li>
-			<li><button class="success button" id="go" onclick="go();">GO!</button></li>
+			<li><button class="roll button" id="go" onclick="go();">GO!</button></li>
       <li><button class="button dropdown">
         <div>
           <span>BG color</span>
@@ -206,6 +227,9 @@ body { background:#F1C40F url(img/bg-noise-orange.png); font-family: 'Montserrat
   $(".color").click(function(){
     var color = $(this).attr("data-value");
     $("body").css("background", color);
+    $(".button").hover(function() {
+  $(this).css("color",color)
+});
   });
   
   
@@ -217,6 +241,9 @@ body { background:#F1C40F url(img/bg-noise-orange.png); font-family: 'Montserrat
       //d.innerHTML = c.value;
       var color = c.value;
       $("body").css("background", color);
+      $(".button").hover(function() {
+  $(this).css("color",color)
+});
     }, false);
   }
 });
