--- a/index.html
+++ b/index.html
@@ -190,6 +190,7 @@ body { background:#F1C40F url(img/bg-noise-orange.png); font-family: 'Montserrat
   background-color:#5da423;
   color:white;
 }
+  
 </style>
 
 </head>
@@ -220,15 +221,28 @@ body { background:#F1C40F url(img/bg-noise-orange.png); font-family: 'Montserrat
         
 </li>
 
-    </div><script>
+    </div>
+<script>
+  // $(".button").hover(
+  //     function () {
+  //       $(this).addClass("hover");
+  //     },
+  //     function () {
+  //       $(this).removeClass("hover");
+  //     }
+  //   );
+  </script>
+    <script>
 
       $(function() {
   //bg color selector
   $(".color").click(function(){
     var color = $(this).attr("data-value");
     $("body").css("background", color);
-    $(".button").hover(function() {
-  $(this).css("color",color)
+      $(".button").hover(function(){
+  $(this).css("color", color);
+}, function(){
+  $(this).css("color", "white");
 });
   });
   
@@ -241,8 +255,10 @@ body { background:#F1C40F url(img/bg-noise-orange.png); font-family: 'Montserrat
       //d.innerHTML = c.value;
       var color = c.value;
       $("body").css("background", color);
-      $(".button").hover(function() {
-  $(this).css("color",color)
+      $(".button").hover(function(){
+  $(this).css("color", color);
+}, function(){
+  $(this).css("color", "white");
 });
     }, false);
   }
@@ -261,6 +277,11 @@ function pickColor() {
   // Do stuff on change of the gradient
   gp.on('change', complete => {
     document.body.style.background = gp.getSafeValue();
+    $(".button").hover(function(){
+  $(this).css("color", gp.getSafeValue());
+}, function(){
+  $(this).css("color", "green");
+});
   })
   </script>
     </ul>
