hardcode white backgrond black text when hover for default condition

--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@ function pickColor() {
     color_gradient = gp.getSafeValue();
   })
   $(".button").hover(function(){
-  $(this).css("color", color_gradient);
+  $(this).css("color", "black");
 }, function(){
   $(this).css("color", "white");
 });
