fixed the conflicting color

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ h3{
 #namesbox { min-height:320px;font-size:32px;color:#333;resize:both;border:1px solid #F39C12; }
 .extra { font-size:16px;margin-top:20px; }
 #result1 { background:#000;color:#ffde59;font-size:135%;margin-top:8em;padding:25px;z-index:10;margin-top:-150px;font-family: 'Montserrat', sans-serif; }
-#headline { font-size:250%; padding-top:0.35em;}
+#headline { font-size:250%; padding-top:0.35em; color:white;}
 body { background: rgb(55,196,192);
 background: linear-gradient(180deg, rgba(55,196,192,1) 0%, rgba(0,35,59,1) 100%); font-family: 'Montserrat', sans-serif; }
 #varnote { font-size:40px;text-align:center;padding:30px; }
@@ -257,6 +257,11 @@ span{
   right: 0;
   position: absolute;
   font-size:1em;
+}
+
+#go, #save{
+  border-color: white;
+  color:white;
 }
 
 </style>
