added border-radius and letter-spacing

--- a/index.html
+++ b/index.html
@@ -262,6 +262,8 @@ span{
 #go, #save{
   border-color: white;
   color:white;
+  letter-spacing: 2px;
+  border-radius: 0.5rem;
 }
 
 </style>
@@ -281,7 +283,7 @@ span{
       <li><button class="button dropdown">
       Customise
   <div class="dropdown-content">
-      <span style="padding:0.2em;">Change background color</span><br/> 
+      <span style="padding:0.2em;">Background color</span><br/> 
       <div class="" style="padding-top:1em;">
         <!-- <div class="color floral_white" data-value="#fffaf0"></div>
         <div class="color gray" data-value="#eaeaea"></div>
@@ -291,7 +293,7 @@ span{
           <div class="color picker" onclick="pickColor();"><img src='img/color-picker-icon.png' /></div> --><div id ="gp" style="padding-top:1em;"></div>
           </div>
         <div class="" style="padding-top:1em;">
-          <span style="padding:0.2em;">Upload logo / theme picture</span>
+          <span style="padding:0.2em;">Upload theme picture</span>
         <label for="getval">
             <!-- <i class="fas fa-image" id="upload_image"></i> -->
         </label>
@@ -299,7 +301,7 @@ span{
         <!-- <i onclick="myFunction(this)" class="fas fa-eye"></i><br/> -->
         </div>
         <div class="" style="padding-top:1em;">
-        <span style="padding:0.2em;">Change headline and button color</span><br/>
+        <span style="padding:0.2em;">Font color</span><br/>
         <!-- <div class="color" style="margin-top:1em;" id="toggle_font_color"></div> -->
         <div class="color picker" style="margin-top:1em;" onclick="pickColor();"><img src='img/color-picker-icon.png' /></div> 
       </div>
