--- a/index.html
+++ b/index.html
@@ -19,18 +19,18 @@
  <link rel="stylesheet" href="https://cdn.rawgit.com/artf/grapick/master/dist/grapick.min.css" />
   <script src="https://cdn.rawgit.com/artf/grapick/master/dist/grapick.min.js"></script>
 <style>
-h3{
-  font-family: 'Montserrat', sans-serif;
+body{
+  font-family: 'Nunito', sans-serif;
 }  
 #values { position:relative;font-size:500%;text-align:center;margin: 1em auto;z-index:0; }
 .name { overflow:hidden;display:block; }
 #names { display:none;padding:5px; height:100%;}
 #namesbox { min-height:320px;font-size:32px;color:#333;resize:both;border:1px solid #F39C12; }
 .extra { font-size:16px;margin-top:20px; }
-#result1 { background:#000;color:#ffde59;font-size:135%;margin-top:8em;padding:25px;z-index:10;margin-top:-150px;font-family: 'Montserrat', sans-serif; }
-#headline { font-size:250%; padding-top:0.35em; color:white;}
+#result1 { background:#000;color:#ffde59;font-size:135%;margin-top:8em;padding:25px;z-index:10;margin-top:-150px;}
+#headline { font-size:250%; padding-top:0.35em; color:white;font-family: "Century Gothic", sans-serif;text-transform: uppercase;}
 body { background: rgb(55,196,192);
-background: linear-gradient(180deg, rgba(55,196,192,1) 0%, rgba(0,35,59,1) 100%); font-family: 'Montserrat', sans-serif; }
+background: linear-gradient(180deg, rgba(55,196,192,1) 0%, rgba(0,35,59,1) 100%);}
 #varnote { font-size:40px;text-align:center;padding-bottom:1.5rem; }
 .icons > input
 {
@@ -72,6 +72,7 @@ background: linear-gradient(180deg, rgba(55,196,192,1) 0%, rgba(0,35,59,1) 100%)
 /* https://milligram.github.io/ */
 @import url('//fonts.googleapis.com/css?family=Roboto:300,300italic,700,700italic');
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@200;600&display=swap');
 @import url('//cdn.rawgit.com/necolas/normalize.css/master/normalize.css');
 @import url('//cdn.rawgit.com/milligram/milligram/master/dist/milligram.min.css');
 
@@ -195,6 +196,7 @@ span{
   background-color:transparent;
   border: 3px solid #66FCF1;
   color:#66FCF1;
+  text-transform: uppercase;
 }
 
 .button:hover{
@@ -394,7 +396,7 @@ span{
   z-index: 9;
   width: 80%;
   height: 80%;
-    border: solid 2px rgba(222,222,222,.9);
+    /*border: solid 2px rgba(222,222,222,.9);*/
   box-sizing: content-box;
   pointer-events: none;
 }
@@ -444,7 +446,7 @@ span{
 </head>
 <body onload="reset();">
 
-  <div class="full-head" id = 'hide' style="width:100%;background:rgba(0,0,0,1);border-bottom:1px solid #D35400;">
+  <div class="full-head" id = 'hide' style="width:100%;background:rgba(0,0,0,1);">
 	<div class="row">
 		<!-- <div class="large-12 columns" style="padding-top:50px;background:#111 url(https://source.unsplash.com/user/heysupersimi) repeat-x center top;z-index:20;"> -->
       <div class="large-12 columns" style="padding-top:50px;background:rgba(0,0,0,0);z-index:20;">
