fixed the myFunction

--- a/index.html
+++ b/index.html
@@ -610,7 +610,7 @@ function readURL(){
         </label>
         <input type='file' id='getval' /> -->
 
-        <i onclick="myFunction(this)" class="fas fa-chevron-circle-down"></i><br/>
+        <i onclick="myFunction1(this)" class="fas fa-chevron-circle-down"></i><br/>
       <!-- </div> --> 
 			
 			<div id="varnote"><div class="crop-wrapper">
@@ -989,7 +989,7 @@ if (!document.exitFullscreen) {
   document.exitFullscreen = document.mozExitFullscreen || document.webkitExitFullscreen || document.msExitFullscreen;
 }
 
-function myFunction(x) {
+function myFunction1(x) {
 
   if (document.fullscreenElement) {
     $("#hide").show();
