overwrite font-family with !important and set font-weight to 200

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <script src="https://cdn.rawgit.com/artf/grapick/master/dist/grapick.min.js"></script>
 <style>
 body{
-  font-family: 'Nunito', sans-serif;
+  font-family: 'Nunito', sans-serif; !important
 }  
 #values { position:relative;font-size:500%;text-align:center;margin: 1em auto;z-index:0; }
 .name { overflow:hidden;display:block; }
@@ -197,6 +197,7 @@ span{
   border: 3px solid #66FCF1;
   color:#66FCF1;
   text-transform: uppercase;
+  font-weight: 200;
 }
 
 .button:hover{
