removed unused imports

--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@ background: linear-gradient(180deg, rgba(55,196,192,1) 0%, rgba(0,35,59,1) 100%)
 
 /* begin base styles */
 /* https://milligram.github.io/ */
-@import url('//fonts.googleapis.com/css?family=Roboto:300,300italic,700,700italic');
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap');
+/*@import url('//fonts.googleapis.com/css?family=Roboto:300,300italic,700,700italic');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap');*/
 @import url('https://fonts.googleapis.com/css2?family=Nunito:wght@200;600&display=swap');
 @import url('//cdn.rawgit.com/necolas/normalize.css/master/normalize.css');
 @import url('//cdn.rawgit.com/milligram/milligram/master/dist/milligram.min.css');
